Add SENTRY_DEFAULT_TIME_ZONE for 8.6

--- a/templates/sentry.conf.py.j2
+++ b/templates/sentry.conf.py.j2
@@ -50,6 +50,7 @@ SENTRY_ALLOW_ORIGIN = 'https://demo.energyefficientequity.com'
 # Get critical announcements from Sentry
 SENTRY_BEACON = True
 
+SENTRY_DEFAULT_TIME_ZONE = '{{sentry_default_time_zone}}'
 
 #########
 # Cache #
